src/objects/Quote.object
<CustomObject>
    <fields>
        <fullName>APAC_Manager_Approved_Non_Card__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APAC Manager Approved Non Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APAC_Non_Supplies_Count__c</fullName>
        <label>APAC Non Supplies Count</label>
        <summaryFilterItems>
            <field>Quote_Line__c.Supplies_Product_Line__c</field>
            <operation>equals</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Quote_Line__c.Product_Conversion_Source__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Line__c.PC_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APAC_Ready_for_Final_Approver__c</fullName>
        <defaultValue>false</defaultValue>
        <label>APAC Ready for Final Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APAC_Supplies_Count__c</fullName>
        <label>APAC Supplies Count</label>
        <summaryFilterItems>
            <field>Quote_Line__c.Supplies_Product_Line__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Quote_Line__c.Product_Conversion_Source__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Line__c.PC_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Email__c</fullName>
        <description>Used to send email to account owner according to distributor or reseller checked</description>
        <label>Account Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Price_List__c</fullName>
        <formula>IF( Direct_Distributor__c , Distributor__r.Price_List__c ,IF(Direct_EndUser__c, End_User__r.Price_List__c, IF(Direct_Reseller__c,  Reseller__r.Price_List__c, Opportunity.Account.Price_List__c )))</formula>
        <label>Account Price List</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Approver_1__c</fullName>
        <label>Additional Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Additional_Approver_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Approver_2__c</fullName>
        <label>Additional Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Additional_Approver_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allow_Approval_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Approval Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Approval__c</fullName>
        <formula>IF(Reseller_Total_Special_Value_New__c &gt; 0, true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allow Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allowed_For_Submission__c</fullName>
        <label>Allowed For Submission</label>
        <summaryFilterItems>
            <field>Quote_Line__c.Min_Qty__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Line__c.PC_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <inlineHelpText>Depends on &quot;Industry&quot;</inlineHelpText>
        <label>Application</label>
        <picklist>
            <controllingField>Industry__c</controllingField>
            <picklistValues>
                <fullName>Animal Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Management Tracking &amp; Movement (owned by the company)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baggage Reconciliation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check Scanning &amp; Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Couponing &amp; Gift Registry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross Docking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dietary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Store Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document &amp; Records Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Identification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory Management Tracking &amp; Movement (product of the company)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample Specimen &amp; Biologics Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loyalty &amp; Membership Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medication Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Operator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Management and Wireless Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ordering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Person Identification Movement Access Control and Authorization/Authentication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Point of Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescription Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prescription Writing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Receiving/Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reverse Logistics Merchandise Returns</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Decision__c</fullName>
        <formula>IF(APAC_Supplies_Count__c &gt; 0, &apos;SUPPLIES_FLOW&apos;, 
IF(APAC_Non_Supplies_Count__c &gt; 0, &apos;NON-SUPPLIES_FLOW&apos;,
IF(PC_EVM_Line_Count__c &gt; 0, &apos;EVM_FLOW&apos;,null)))</formula>
        <label>Approval Decision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Submission_Date__c</fullName>
        <label>Approval Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bypass_Cost_Information_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Cost Information Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_List_Price_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass List Price Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bypass_Standard_Discount_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Standard Discount Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason_Formula__c</fullName>
        <formula>TEXT(Cancellation_Reason__c)</formula>
        <label>Cancellation Reason</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <picklist>
            <picklistValues>
                <fullName>PC Created in Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creating a New PC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost Deal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comp2_Disti_Price__c</fullName>
        <label>Disti Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comp2_End_User_Price__c</fullName>
        <label>End User Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comp2_Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Quotes (Product)</relationshipLabel>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comp2_Reseller_Price__c</fullName>
        <label>Reseller Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitors2__c</fullName>
        <label>Competitor2</label>
        <picklist>
            <picklistValues>
                <fullName>AB Moriah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accucode</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMTDatasoh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARMOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avery Dennison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axiohm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barcode Giant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BarcodeSource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bixolon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brady</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIM Card Imaging Master</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citizen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citoh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Codeo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cognitive Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia ribbons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crown Labels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dacom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daikon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DataCard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datamax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datasouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digicard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitor1</label>
        <picklist>
            <picklistValues>
                <fullName>AB Moriah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accucode</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMTDatasoh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARMOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avery Dennison</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axiohm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barcode Giant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BarcodeSource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bixolon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boca</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brady</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Casio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIM Card Imaging Master</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citizen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citoh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Codeo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cognitive Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colombia ribbons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crown Labels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dacom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daikon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DataCard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datamax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datasouth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digicard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ConvertedPC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Flag is set true for Quote line items which are associated to dummy opportuntiies. and no revision will be allowed on these Quotes</description>
        <label>ConvertedPC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Load_Check__c</fullName>
        <label>Data Load Check</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Account_Currency__c</fullName>
        <label>Account Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Distributor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Direct Distributor</description>
        <label>Direct Distributor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_EndUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Direct EndUser</description>
        <label>Direct EndUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_Reseller__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Direct Reseller</description>
        <label>Direct Reseller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disti_Blended_Margin__c</fullName>
        <formula>IF( 
Direct_Distributor__c == true,    
IF( Disti_Total_Special_Value__c == 0, 0, 
(Disti_Total_Special_Value__c - Total_Disti_Cost__c)/Disti_Total_Special_Value__c ) , 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disti Blended Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Disti_Total_Special_Value__c</fullName>
        <description>Sum of Line Item Distributor&apos;s Disti Total</description>
        <label>Disti Total Special Value</label>
        <summarizedField>QuoteLineItem.Disti_Special_Total__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Distri_Price__c</fullName>
        <label>Disti Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distributor_Error_text__c</fullName>
        <label>Distributor Error text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Distributor_Extra_Disc__c</fullName>
        <label>Distributor Extra Disc</label>
        <summarizedField>QuoteLineItem.Extra_Disc__c</summarizedField>
        <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <description>Distributor</description>
        <label>Distributor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes (Distributor)</relationshipLabel>
        <relationshipName>Quotes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Eligible_for_CMP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible for CMP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligible_for_Growth_Rebate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible for Growth Rebate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_User_Price__c</fullName>
        <label>End User Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_User__c</fullName>
        <description>End User</description>
        <label>End User</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HasPrimary__c</fullName>
        <formula>Opportunity.Primary_Opportunity__c</formula>
        <label>HasPrimary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_PCs__c</fullName>
        <formula>Opportunity.PCs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has PCs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>Industry</description>
        <inlineHelpText>Industry</inlineHelpText>
        <label>Vertical Segment</label>
        <picklist>
            <controllingField>Vertical__c</controllingField>
            <picklistValues>
                <fullName>Primary Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Library</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Administration and Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State and Local Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blood Banks and Donation Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Medical Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospitals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laboratories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long-term Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail Order Pharmacies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third-party Pharmaceutical Repackagers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veterinary Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amusement Parks Museums and Zoos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lodging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parking Lots/Garages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restaurants and Bars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theaters and Cinemas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agriculture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forestry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Machinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metal Products</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsAftermarketServicesPdtLineExists__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAftermarketServicesPdtLineExists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsApproved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsBarcodePdtLineExists__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsBarcodePdtLineExists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCardPdtLineExists__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCardPdtLineExists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInApproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsInApproval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsQLICreatingFromOLI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsQLICreatingFromOLI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_EVM_AIT_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is EVM &amp; AIT Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Questionnaire_Filled__c</fullName>
        <label>Is Questionnaire Filled</label>
        <summaryFilterItems>
            <field>PC_Questionnare__c.Questionnaire_Filled__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>PC_Questionnare__c.Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Item_Compet1__c</fullName>
        <label>Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Compet2__c</fullName>
        <label>Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <description>Justification</description>
        <label>Justification</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>L1Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>L1Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L1_User__c</fullName>
        <label>L1 User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>L2Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L2_User__c</fullName>
        <label>L2 User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L3Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>L3Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>L3_User__c</fullName>
        <label>L3 User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_SB_Quote_Hardware_Only_Margin__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Legacy SB Quote Hardware Only Margin</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Level1Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Level1Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level_1_Approval__c</fullName>
        <formula>Opportunity.Owner.Manager_Report_Purpose__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 1 Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_1_Manager_Approval__c</fullName>
        <label>Level 1 Manager Approval</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Level_1_Manager_Approval</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level_2_Approval__c</fullName>
        <formula>IF( L3_User__c !=null, L3_User__r.Manager_Report_Purpose__c,  
IF( L2_User__c !=null, L2_User__r.Manager_Report_Purpose__c,
if( L1_User__c != null, L1_User__r.Manager_Report_Purpose__c, 
Opportunity.Owner.Manager.Manager_Report_Purpose__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 2 Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_2_Manager_Approval__c</fullName>
        <label>Level 2 Manager Approval</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Level_2_Manager_Approval</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level_3_Approval__c</fullName>
        <formula>IF( L3_User__c !=null, L3_User__r.Manager.Manager_Report_Purpose__c, IF( L2_User__c !=null, L2_User__r.Manager.Manager_Report_Purpose__c, if( L1_User__c != null, L1_User__r.Manager.Manager_Report_Purpose__c, Opportunity.Owner.Manager.Manager.Manager_Report_Purpose__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Level 3 Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_3_Manager_Approval__c</fullName>
        <label>Level 3 Manager Approval</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Level_3_Manager_Approval</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Low_Threshold_Count__c</fullName>
        <label>Low Threshold Count</label>
        <summaryFilterItems>
            <field>Quote_Line__c.PC_Threshold_Identifier__c</field>
            <operation>equals</operation>
            <value>Low</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Line__c.PC_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MNA_Number__c</fullName>
        <label>MNA #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MNA_URL__c</fullName>
        <label>MNA URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Level_Lookup__c</fullName>
        <label>Manager Level Lookup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quote1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Medium_Threshold_Count__c</fullName>
        <label>Medium Threshold Count</label>
        <summaryFilterItems>
            <field>Quote_Line__c.PC_Threshold_Identifier__c</field>
            <operation>equals</operation>
            <value>Medium</value>
        </summaryFilterItems>
        <summaryForeignKey>Quote_Line__c.PC_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Mgr_Email__c</fullName>
        <label>Mgr Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Multi_National_or_Global_Account__c</fullName>
        <label>Multi-National or Global Account?</label>
        <summaryFilterItems>
            <field>PC_Questionnare__c.MultiNational_or_Global_Account__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>PC_Questionnare__c.Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>NAProdMgr__c</fullName>
        <description>Stores the Approver information for NA Prod Manager Flow</description>
        <label>NAProdMgr</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quotes5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NonCardApproval__c</fullName>
        <label>NonCardApproval</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Non_CardApproval</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_Line_Items__c</fullName>
        <label>Number of Line Items</label>
        <summaryForeignKey>Quote_Line__c.PC_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>